--- a/HomeManager/View/ucWerkBalk.xaml
+++ b/HomeManager/View/ucWerkBalk.xaml
@@ -1,20 +1,21 @@
-﻿<UserControl x:Class="HomeManager.View.ucWerkBalk"
-             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:HomeManager.View"
-             mc:Ignorable="d" 
-             Background="{StaticResource myTitleBar}"
-             d:DesignHeight="30" d:DesignWidth="200">
-    <StackPanel Orientation="Horizontal"
-                HorizontalAlignment="Right">
+﻿<UserControl
+    x:Class="HomeManager.View.ucWerkBalk"
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:local="clr-namespace:HomeManager.View"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    d:DesignHeight="30"
+    d:DesignWidth="200"
+    Background="{StaticResource myTitleBar}"
+    mc:Ignorable="d">
+    <StackPanel HorizontalAlignment="Right" Orientation="Horizontal">
         <Button
+            Width="15"
+            Height="15"
             Command="{Binding cmdNew}"
             CommandParameter="{Binding RelativeSource={RelativeSource AncestorType={x:Type UserControl}}}"
             Style="{StaticResource AddImage}"
-            Height="15"
-            Width="15"
             ToolTip="New" />
         <Button
             Command="{Binding cmdSave}"
@@ -30,7 +31,7 @@
             Command="{Binding cmdCancel}"
             CommandParameter="{Binding RelativeSource={RelativeSource AncestorType={x:Type UserControl}}}"
             Style="{StaticResource CancelImage}"
-            ToolTip="Cancel" /> 
+            ToolTip="Cancel" />
 
 
         <Button
