--- a/HomeManager/MainWindow.xaml
+++ b/HomeManager/MainWindow.xaml
@@ -36,11 +36,7 @@
         </Storyboard>
     </Window.Resources>
 
-
-
-
-
-
+    
     <Grid x:Name="grdMain">
         <Grid.RowDefinitions>
             <RowDefinition Height="60" />
@@ -51,11 +47,6 @@
             <ColumnDefinition Width="auto" />
             <ColumnDefinition Width="*" />
         </Grid.ColumnDefinitions>
-
-
-
-
-
 
 
         <uc:ucTitlePerson
@@ -70,6 +61,10 @@
             Grid.ColumnSpan="2"
             Source="/Images/background.jpg"
             Stretch="Fill" />
+
+
+
+
 
         <!--#region  HamburgerMenu-->
 
@@ -99,7 +94,11 @@
                     Data="{StaticResource myPathHouse}"
                     Fill="White" />
 
-                <StackPanel Grid.Row="1" Orientation="Vertical" HorizontalAlignment="Left" Width="200">
+                <StackPanel
+                    Grid.Row="1"
+                    Width="200"
+                    HorizontalAlignment="Left"
+                    Orientation="Vertical">
                     <Expander Style="{StaticResource myHamburgerPersonen}">
                         <StackPanel x:Name="stckPerson">
                             <Button
@@ -116,8 +115,8 @@
                     </Expander>
 
 
-                    <Button  Style="{StaticResource myExpanderDagboek}" Content="Dagboek"/>
-                    
+                    <Button Content="Dagboek" Style="{StaticResource myExpanderDagboek}" />
+
                     <Expander Style="{StaticResource myHamburgerBudget}">
                         <StackPanel x:Name="stckBudget">
                             <Button Content="Domiciliëring" Style="{StaticResource myMenuTandwiel}" />
@@ -158,87 +157,6 @@
 
 
 
-
-
-                <!--<StackPanel
-                    Grid.Row="1"
-                    Width="auto"
-                    Margin="0,5,0,0"
-                    Orientation="Vertical">
-
-
-                    <ToggleButton
-                        x:Name="btnMenuPerson"
-                        Checked="btnMenuPerson_Checked"
-                        Style="{StaticResource myMenuPerson}"
-                        Unchecked="btnMenuPerson_Unchecked" />
-                    <StackPanel x:Name="stckPerson" Visibility="Collapsed">
-                        <Button
-                            Click="Button_Click"
-                            Content="Persoon"
-                            Style="{StaticResource myMenuPersonPersoon}" />
-                        <Button Content="EmailType" Style="{StaticResource myMenuTandwiel}" />
-                        <Button Content="TelefoonType" Style="{StaticResource myMenuTandwiel}" />
-                        <Button Content="Land" Style="{StaticResource myMenuTandwiel}" />
-                        <Button Content="Provincie" Style="{StaticResource myMenuTandwiel}" />
-                        <Button Content="Gemeente" Style="{StaticResource myMenuTandwiel}" />
-                        <Button Content="Functies" Style="{StaticResource myMenuTandwiel}" />
-                    </StackPanel>
-                    <ToggleButton Style="{StaticResource myMenuDagboek}" />
-
-                    <ToggleButton
-                        x:Name="btnBudget"
-                        Checked="btnBudget_Checked"
-                        Style="{StaticResource myMenuBudget}"
-                        Unchecked="btnBudget_Unchecked" />
-                    <StackPanel x:Name="stckBudget" Visibility="Collapsed">
-                        <Button Content="Domiciliëring" Style="{StaticResource myMenuTandwiel}" />
-                        <Button Content="Begunstigden" Style="{StaticResource myMenuTandwiel}" />
-                        <Button Content="Frequentie" Style="{StaticResource myMenuTandwiel}" />
-                        <Button Content="Budget Categorie" Style="{StaticResource myMenuTandwiel}" />
-                    </StackPanel>
-
-
-                    <ToggleButton
-                        x:Name="btnTodo"
-                        Checked="btnTodo_Checked"
-                        Style="{StaticResource myMenuTodo}"
-                        Unchecked="btnTodo_Unchecked" />
-                    <StackPanel x:Name="stckTodo" Visibility="Collapsed">
-                        <Button Content="Todo Collectie" Style="{StaticResource myMenuTandwiel}" />
-                        <Button Content="Todo Categoriën" Style="{StaticResource myMenuTandwiel}" />
-                        <Button Content="Todo Kleuren" Style="{StaticResource myMenuTandwiel}" />
-                    </StackPanel>
-
-
-                    <ToggleButton
-                        x:Name="btnSecurity"
-                        Checked="btnSecurity_Checked"
-                        Style="{StaticResource myMenuSecurity}"
-                        Unchecked="btnSecurity_Unchecked" />
-                    <StackPanel x:Name="stckSecurity" Visibility="Collapsed">
-                        <Button Content="Account beheren" Style="{StaticResource myMenuTandwiel}" />
-                        <Button Content="Wachtwoorden" Style="{StaticResource myMenuTandwiel}" />
-                        <Button Content="Wachtwoordengroep" Style="{StaticResource myMenuTandwiel}" />
-                        <Button Content="Rollen" Style="{StaticResource myMenuTandwiel}" />
-                    </StackPanel>
-
-
-
-
-                    <ToggleButton
-                        x:Name="btnStickyNotes"
-                        Checked="btnStickyNotes_Checked"
-                        Style="{StaticResource myMenuStickyNotes}"
-                        Unchecked="btnStickyNotes_Unchecked" />
-                    <StackPanel x:Name="stckStickynotes" Visibility="Collapsed">
-                        <Button Content="Sticky notes colors" Style="{StaticResource myMenuStickyNote}" />
-                    </StackPanel>
-
-
-
-
-                </StackPanel>-->
                 <Path
                     Grid.Row="2"
                     Width="10"
