--- a/HomeManager/MainWindow.xaml
+++ b/HomeManager/MainWindow.xaml
@@ -55,7 +55,7 @@
             HorizontalAlignment="Right"
             VerticalAlignment="Center" />
 
-
+        <!--  test  -->
         <Image
             Grid.Row="1"
             Grid.ColumnSpan="2"
