--- a/HomeManager/Resources/BrushesDictionary.xaml
+++ b/HomeManager/Resources/BrushesDictionary.xaml
@@ -1,11 +1,10 @@
-﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
+﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
 
 
-  
-    <!--#region SolidColorBrushes -->
 
-    <SolidColorBrush x:Key="myMenuIconBrush" Color="#00223e"/>
+    <!--#region SolidColorBrushes-->
+
+    <SolidColorBrush x:Key="myMenuIconBrush" Color="#00223e" />
 
     <SolidColorBrush x:Key="myTitleBar" Color="#024f87" />
     <SolidColorBrush x:Key="myMenuIcon" Color="#00223e" />
