--- a/HomeManager/Resources/StylesDictionary.xaml
+++ b/HomeManager/Resources/StylesDictionary.xaml
@@ -1,5 +1,4 @@
-﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
+﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
 
 
     <!--#region HamburgerMenu Versie 2-->
@@ -637,7 +636,8 @@
     <!--#endregion-->
 
 
-    <!--#region  hamburger menu 1  Wordt niet gebruikt--><!--
+    <!--#region  hamburger menu 1  Wordt niet gebruikt-->
+    <!--
     <Style x:Key="AddPersonImage" TargetType="ContentControl">
         <Setter Property="Cursor" Value="Hand" />
         <Setter Property="Height" Value="10" />
@@ -909,7 +909,8 @@
             </Trigger>
         </Style.Triggers>
     </Style>
-    --><!--#endregion-->
+    -->
+    <!--#endregion-->
 
 
 
