--- a/HomeManager/App.xaml
+++ b/HomeManager/App.xaml
@@ -2,19 +2,29 @@
     x:Class="HomeManager.App"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:Helpers="clr-namespace:HomeManager.Helpers"
+    xmlns:VM="clr-namespace:HomeManager.ViewModel"
     xmlns:local="clr-namespace:HomeManager"
     StartupUri="MainWindow.xaml">
     <Application.Resources>
 
-        <!--in de resource kan maar 1 dictionary staan dus we mergen al de resources.
-            Aangezien ze in de app file staan zijn de key's van de resources over heel het project aanspreekbaar-->
+        <!--
+            in de resource kan maar 1 dictionary staan dus we mergen al de resources.
+            Aangezien ze in de app file staan zijn de key's van de resources over heel het project aanspreekbaar
+        -->
 
 
         <ResourceDictionary>
+
+            <VM:clsVMLocator x:Key="VML" />
+            <Helpers:clsIntVisibilityConverter x:Key="VisibilityConvertor" />
+            <Helpers:clsFocusExtension x:Key="FocusExtension" />
+
+
             <ResourceDictionary.MergedDictionaries>
                 <ResourceDictionary Source="\Resources\BrushesDictionary.xaml" />
                 <ResourceDictionary Source="\Resources\GeometryDrawingDictionary.xaml" />
-                <ResourceDictionary Source="\Resources\StyleHamburgerMenu.xaml"/>
+                <ResourceDictionary Source="\Resources\StyleHamburgerMenu.xaml" />
                 <ResourceDictionary Source="\Resources\StylesDictionary.xaml" />
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
