--- a/HomeManager/MainWindow.xaml
+++ b/HomeManager/MainWindow.xaml
@@ -2,6 +2,8 @@
     x:Class="HomeManager.MainWindow"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:V="clr-namespace:HomeManager.View"
+    xmlns:VM="clr-namespace:HomeManager.ViewModel"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:local="clr-namespace:HomeManager"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
@@ -11,10 +13,17 @@
     Height="900"
     Background="{StaticResource myTitleBar}"
     mc:Ignorable="d">
-
+    <Window.DataContext>
+        <VM:clsHomeVM />
+    </Window.DataContext>
 
 
     <Window.Resources>
+
+        <DataTemplate DataType="{x:Type VM:clsRechtenViewModel}">
+            <V:ucRoles />
+        </DataTemplate>
+
 
         <Storyboard x:Key="ShowMenu">
             <DoubleAnimation
@@ -133,7 +142,11 @@
                             <Button Content="Account beheren" Style="{StaticResource myMenuTandwiel}" />
                             <Button Content="Wachtwoorden" Style="{StaticResource myMenuTandwiel}" />
                             <Button Content="Wachtwoordengroep" Style="{StaticResource myMenuTandwiel}" />
-                            <Button Content="Rollen" Style="{StaticResource myMenuTandwiel}" />
+                            <Button
+                                Command="{Binding NavCommand}"
+                                CommandParameter="clsRechtenViewModel"
+                                Content="Rollen"
+                                Style="{StaticResource myMenuTandwiel}" />
                         </StackPanel>
                     </Expander>
 
@@ -171,6 +184,12 @@
             Unchecked="ToggleButton_Unchecked" />
 
         <!--#endregion-->
+
+
+        <ContentControl
+            Grid.Row="1"
+            Grid.Column="1"
+            Content="{Binding CurrentViewModel}" />
 
     </Grid>
 </Window>
