--- a/HomeManager/View/Security/ucRoles.xaml
+++ b/HomeManager/View/Security/ucRoles.xaml
@@ -1,30 +1,19 @@
 ﻿<UserControl
-    x:Class="HomeManager.View.Security.ucRoles"
+    x:Class="HomeManager.View.ucRoles"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-    xmlns:local="clr-namespace:HomeManager.View.Security"
+    xmlns:local="clr-namespace:HomeManager.View"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:i="http://schemas.microsoft.com/xaml/behaviors"
     xmlns:uc="clr-namespace:HomeManager.View"
     d:DesignHeight="450"
     d:DesignWidth="800"
     Background="{StaticResource myBackground}"
     mc:Ignorable="d">
-    <UserControl.Resources>
-        <Style TargetType="TreeViewItem">
-            <Setter Property="HeaderTemplate">
-                <Setter.Value>
-                    <DataTemplate>
-                        <StackPanel Orientation="Horizontal">
-                            <CheckBox Content="{Binding}" IsChecked="False" />
-                        </StackPanel>
-                    </DataTemplate>
-                </Setter.Value>
-            </Setter>
-        </Style>
-    </UserControl.Resources>
 
-    <Grid>
+
+    <Grid DataContext="{Binding Source={StaticResource VML}, Path=RechtenViewModel}">
         <Grid.RowDefinitions>
             <RowDefinition Height="50" />
             <RowDefinition Height="*" />
@@ -69,7 +58,7 @@
                     <ColumnDefinition Width="*" />
                     <ColumnDefinition Width="100" />
                     <ColumnDefinition Width="60" />
-                    <ColumnDefinition Width="150" />
+                    <ColumnDefinition Width="200" />
                     <ColumnDefinition Width="*" />
                 </Grid.ColumnDefinitions>
                 <Grid.RowDefinitions>
@@ -113,43 +102,36 @@
                     Grid.Row="2"
                     Grid.RowSpan="4"
                     Grid.Column="3">
-                    <TreeView>
-                        <TreeViewItem Header="Personen">
-                            <TreeViewItem Header="Openen" />
-                            <TreeViewItem Header="Nieuw" />
-                            <TreeViewItem Header="Aanpassen" />
-                            <TreeViewItem Header="Verwijderen" />
-                            <TreeViewItem Header="Pop-ups" />
-                        </TreeViewItem>
-                        <TreeViewItem Header="Dagboek">
-                            <TreeViewItem Header="Openen" />
-                            <TreeViewItem Header="Nieuw" />
-                            <TreeViewItem Header="Aanpassen" />
-                            <TreeViewItem Header="Verwijderen" />
-                            <TreeViewItem Header="Pop-ups" />
-                        </TreeViewItem>
-                        <TreeViewItem Header="Security">
-                            <TreeViewItem Header="Openen" />
-                            <TreeViewItem Header="Nieuw" />
-                            <TreeViewItem Header="Aanpassen" />
-                            <TreeViewItem Header="Verwijderen" />
-                            <TreeViewItem Header="Pop-ups" />
-                        </TreeViewItem>
-                        <TreeViewItem Header="Budget">
-                            <TreeViewItem Header="Openen" />
-                            <TreeViewItem Header="Nieuw" />
-                            <TreeViewItem Header="Aanpassen" />
-                            <TreeViewItem Header="Verwijderen" />
-                            <TreeViewItem Header="Pop-ups" />
-                        </TreeViewItem>
-                        <TreeViewItem Header="Sticky Notes">
-                            <TreeViewItem Header="Openen" />
-                            <TreeViewItem Header="Nieuw" />
-                            <TreeViewItem Header="Aanpassen" />
-                            <TreeViewItem Header="Verwijderen" />
-                            <TreeViewItem Header="Pop-ups" />
-                        </TreeViewItem>
-                        <TreeViewItem Header="Test" />
+                    <TreeView ItemsSource="{Binding MijnRechtenCatogorieCollectie}">
+                        <TreeView.ItemTemplate>
+                            <HierarchicalDataTemplate ItemsSource="{Binding Rechten}">
+                                <StackPanel Orientation="Horizontal">
+                                    <CheckBox IsChecked="{Binding IsChecked}">
+                                        <i:Interaction.Triggers>
+                                            <i:EventTrigger EventName="Click">
+                                                <i:InvokeCommandAction Command="{Binding DataContext.cmdIsChecked, RelativeSource={RelativeSource AncestorType=TreeView}}" CommandParameter="{Binding}" />
+                                            </i:EventTrigger>
+                                        </i:Interaction.Triggers>
+                                    </CheckBox>
+                                    <TextBlock Text="{Binding CatogorieNaam}" />
+                                </StackPanel>
+                                <HierarchicalDataTemplate.ItemTemplate>
+                                    <DataTemplate>
+                                        <StackPanel Orientation="Horizontal">
+                                            <CheckBox IsChecked="{Binding IsChecked}">
+                                                <i:Interaction.Triggers>
+                                                    <i:EventTrigger EventName="Click">
+                                                        <i:InvokeCommandAction Command="{Binding DataContext.cmdIsChecked, RelativeSource={RelativeSource AncestorType=TreeView}}" CommandParameter="{Binding}" />
+                                                    </i:EventTrigger>
+                                                </i:Interaction.Triggers>
+                                            </CheckBox>
+                                            <TextBlock Text="{Binding RechtenName}" />
+                                        </StackPanel>
+
+                                    </DataTemplate>
+                                </HierarchicalDataTemplate.ItemTemplate>
+                            </HierarchicalDataTemplate>
+                        </TreeView.ItemTemplate>
                     </TreeView>
                 </ScrollViewer>
             </Grid>
