--- a/HomeManager/View/Security/ucCredentialGroup.xaml
+++ b/HomeManager/View/Security/ucCredentialGroup.xaml
@@ -1,16 +1,17 @@
 ﻿<UserControl
-    x:Class="HomeManager.View.Security.ucCredentialGroup"
+    x:Class="HomeManager.View.ucCredentialGroup"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+        xmlns:Helpers="clr-namespace:HomeManager.Helpers"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-    xmlns:local="clr-namespace:HomeManager.View.Security"
+    xmlns:local="clr-namespace:HomeManager.View"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:uc="clr-namespace:HomeManager.View"
     d:DesignHeight="450"
     d:DesignWidth="800"
     Background="{StaticResource myBackground}"
     mc:Ignorable="d">
-    <Grid>
+    <Grid DataContext="{Binding Source={StaticResource VML}, Path=CredentialGroupViewModel}">
         <Grid.RowDefinitions>
             <RowDefinition Height="50" />
             <RowDefinition Height="*" />
@@ -72,7 +73,13 @@
                     Grid.Row="1"
                     Grid.RowSpan="5"
                     Grid.Column="1"
-                    DisplayMemberPath="RolNaam" />
+                    DisplayMemberPath="WachtwoordGroep" 
+                                        ItemsSource="{Binding MijnCollectie}"
+                    SelectedItem="{Binding MijnSelectedItem, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
+                    />
+
+
+              
 
                 <Label
                     Grid.Row="1"
@@ -85,7 +92,10 @@
                     Grid.Row="1"
                     Grid.Column="3"
                     Height="20"
-                    VerticalAlignment="center" />
+                    VerticalAlignment="center" 
+                                Helpers:clsFocusExtension.IsFocused="{Binding IsFocusedAfterNew, Mode=TwoWay}"
+                     Text="{Binding MijnSelectedItem.WachtwoordGroep, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged, ValidatesOnDataErrors=True}"
+                    />
 
 
             </Grid>
