--- a/HomeManager/View/Security/ucCredentialManagement.xaml
+++ b/HomeManager/View/Security/ucCredentialManagement.xaml
@@ -1,16 +1,17 @@
 ﻿<UserControl
-    x:Class="HomeManager.View.Security.ucCredentialManagement"
+    x:Class="HomeManager.View.ucCredentialManagement"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:Helpers="clr-namespace:HomeManager.Helpers"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-    xmlns:local="clr-namespace:HomeManager.View.Security"
+    xmlns:local="clr-namespace:HomeManager.View"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:uc="clr-namespace:HomeManager.View"
     d:DesignHeight="450"
     d:DesignWidth="800"
     Background="{StaticResource myBackground}"
     mc:Ignorable="d">
-    <Grid>
+    <Grid DataContext="{Binding Source={StaticResource VML}, Path=CredentialManagementViewModel}">
         <Grid.RowDefinitions>
             <RowDefinition Height="50" />
             <RowDefinition Height="*" />
@@ -107,7 +108,9 @@
                     Grid.Row="1"
                     Grid.Column="3"
                     Height="20"
-                    VerticalAlignment="center" />
+                    VerticalAlignment="center"
+                    Helpers:clsFocusExtension.IsFocused="{Binding IsFocusedAfterNew, Mode=TwoWay}"
+                    Text="{Binding MijnSelectedItem.WachtwoordNaam}" />
 
                 <Label
                     Grid.Row="2"
@@ -120,7 +123,11 @@
                     Grid.Row="2"
                     Grid.Column="3"
                     Height="20"
-                    VerticalAlignment="center" />
+                    VerticalAlignment="center"
+            DataContext="{Binding Source={StaticResource VML}, Path=CredentialGroupViewModel}"
+            ItemsSource="{Binding MijnCollectie}"
+            SelectedValue="{Binding RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type Grid}}, Path=DataContext.MijnSelectedItem.WachtwoordGroepID, Mode=TwoWay}"
+            SelectedValuePath="WachtwoordGroepID" />
 
                 <Label
                     Grid.Row="3"
@@ -129,11 +136,12 @@
                     VerticalAlignment="Top"
                     Content="Wachtwoord omschrijving"
                     FontSize="12" />
-                <TextBlock
+                <TextBox
                     Grid.Row="3"
                     Grid.RowSpan="3"
                     Grid.Column="3"
-                    Background="White" />
+                    Background="White"
+                    Text="{Binding MijnSelectedItem.WachtwoordOmschrijving}" />
 
                 <Label
                     Grid.Row="6"
@@ -146,7 +154,8 @@
                     Grid.Row="6"
                     Grid.Column="3"
                     Height="20"
-                    VerticalAlignment="center" />
+                    VerticalAlignment="center"
+                    Text="{Binding MijnSelectedItem.Login}" />
 
                 <Label
                     Grid.Row="7"
@@ -159,7 +168,8 @@
                     Grid.Row="7"
                     Grid.Column="3"
                     Height="20"
-                    VerticalAlignment="center" />
+                    VerticalAlignment="center"
+                    Text="{Binding MijnSelectedItem.Wachtwoord}" />
 
 
 
