--- a/HomeManager/View/Security/ucRoles.xaml
+++ b/HomeManager/View/Security/ucRoles.xaml
@@ -2,10 +2,11 @@
     x:Class="HomeManager.View.ucRoles"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:Helpers="clr-namespace:HomeManager.Helpers"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:i="http://schemas.microsoft.com/xaml/behaviors"
     xmlns:local="clr-namespace:HomeManager.View"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    xmlns:i="http://schemas.microsoft.com/xaml/behaviors"
     xmlns:uc="clr-namespace:HomeManager.View"
     d:DesignHeight="450"
     d:DesignWidth="800"
@@ -75,7 +76,9 @@
                     Grid.Row="1"
                     Grid.RowSpan="5"
                     Grid.Column="1"
-                    DisplayMemberPath="RolNaam" />
+                    DisplayMemberPath="RolName"
+                    ItemsSource="{Binding MijnRollenCollectie}"
+                    SelectedItem="{Binding MijnSelectedItem, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
 
                 <Label
                     Grid.Row="1"
@@ -88,7 +91,12 @@
                     Grid.Row="1"
                     Grid.Column="3"
                     Height="20"
-                    VerticalAlignment="center" />
+                    VerticalAlignment="center"
+                    Helpers:clsFocusExtension.IsFocused="{Binding IsFocusedAfterNew, Mode=TwoWay}"
+                    IsEnabled="{Binding MijnSelectedItem.IsTextBoxEnabled}"
+                    Text="{Binding MijnSelectedItem.RolName, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged, ValidatesOnDataErrors=True}" />
+
+     
 
                 <Label
                     Grid.Row="2"
