--- a/HomeManager/View/ucWerkBalk.xaml
+++ b/HomeManager/View/ucWerkBalk.xaml
@@ -36,7 +36,7 @@
 
         <Button
             Command="{Binding cmdClose}"
-            CommandParameter="{Binding RelativeSource={RelativeSource AncestorType={x:Type UserControl}}}"
+            CommandParameter="{Binding RelativeSource={RelativeSource AncestorType=Window}}"
             Style="{StaticResource CloseImage}"
             ToolTip="Exit" />
     </StackPanel>
