--- a/HomeManager/MainWindow.xaml
+++ b/HomeManager/MainWindow.xaml
@@ -2,6 +2,8 @@
     x:Class="HomeManager.MainWindow"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:V="clr-namespace:HomeManager.View"
+    xmlns:VM="clr-namespace:HomeManager.ViewModel"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:local="clr-namespace:HomeManager"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
@@ -12,9 +14,15 @@
     Background="{StaticResource myTitleBar}"
     mc:Ignorable="d">
 
-
+    <Window.DataContext>
+        <VM:clsHomeVM />
+    </Window.DataContext>
 
     <Window.Resources>
+
+        <DataTemplate DataType="{x:Type VM:clsCategoryViewModel}">
+            <V:ucBudgetCategorie />
+        </DataTemplate>
 
         <Storyboard x:Key="ShowMenu">
             <DoubleAnimation
@@ -115,7 +123,11 @@
                             <Button Content="Domiciliëring" Style="{StaticResource myMenuTandwiel}" />
                             <Button Content="Begunstigden" Style="{StaticResource myMenuTandwiel}" />
                             <Button Content="Frequentie" Style="{StaticResource myMenuTandwiel}" />
-                            <Button Content="Budget Categorie" Style="{StaticResource myMenuTandwiel}" />
+                            <Button
+                                Command="{Binding NavCommand}"
+                                CommandParameter="clsCategoryViewModel"
+                                Content="Budget Categorie"
+                                Style="{StaticResource myMenuTandwiel}" />
                         </StackPanel>
                     </Expander>
 
@@ -171,6 +183,12 @@
             Unchecked="ToggleButton_Unchecked" />
 
         <!--#endregion-->
+
+        <ContentControl
+            Grid.Row="1"
+            Grid.Column="1"
+            Content="{Binding CurrentViewModel}" />
+
 
     </Grid>
 </Window>
