--- a/HomeManager/View/Personen/ucPersoon.xaml
+++ b/HomeManager/View/Personen/ucPersoon.xaml
@@ -11,7 +11,7 @@
     d:DesignWidth="800"
     Background="{StaticResource myBackground}"
     mc:Ignorable="d">
-    <Grid>
+    <Grid DataContext="{Binding Source={StaticResource VML}, Path=PersoonViewModel}">
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="*" />
             <ColumnDefinition Width="*" />
@@ -71,7 +71,7 @@
             Grid.Row="2"
             Grid.RowSpan="11"
             Grid.Column="1"
-            ItemsSource="{Binding UserList}">
+            ItemsSource="{Binding MijnCollectie}">
             <ListView.ItemTemplate>
                 <DataTemplate>
                     <Border
@@ -91,8 +91,8 @@
 
                             <!--  Naam en voornaam  -->
                             <StackPanel Margin="10,0,0,0" Orientation="Vertical">
-                                <TextBlock FontWeight="Bold" Text="{Binding LastName}" />
-                                <TextBlock Text="{Binding FirstName}" />
+                                <TextBlock FontWeight="Bold" Text="{Binding Naam}" />
+                                <TextBlock Text="{Binding Voornaam}" />
                             </StackPanel>
                         </StackPanel>
                     </Border>
@@ -111,7 +111,8 @@
             x:Name="txtNaam"
             Grid.Row="2"
             Grid.Column="3"
-            Margin="5" />
+            Margin="5"
+            Text="{Binding MijnSelectedItem.Naam, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged, ValidatesOnDataErrors=True, NotifyOnValidationError=true, ValidatesOnExceptions=True}" />
 
         <TextBlock
             x:Name="Voornaam"
@@ -123,7 +124,8 @@
             x:Name="txtVoorNaam"
             Grid.Row="3"
             Grid.Column="3"
-            Margin="5" />
+            Margin="5"
+            Text="{Binding MijnSelectedItem.Voornaam, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged, ValidatesOnDataErrors=True, NotifyOnValidationError=true, ValidatesOnExceptions=True}" />
 
         <TextBlock
             x:Name="Foto"
@@ -149,18 +151,8 @@
                     <ImageBrush ImageSource="\Images\person1.jpg" Stretch="UniformToFill" />
                 </Border.Background>
             </Border>
-            <Button Style="{StaticResource UploadPersoonButton}" />
+            <Button Command="{Binding cmdUploadPicture}" Style="{StaticResource UploadPersoonButton}" />
         </StackPanel>
-
-
-        <!--<Image
-                x:Name="imgPersoonFoto"
-                <i:Interaction.Triggers>
-                <i:EventTrigger>
-                    <i:InvokeCommandAction />
-                </i:EventTrigger>
-                </i:Interaction.Triggers>
-            </Image>-->
 
 
         <TextBlock
@@ -177,7 +169,7 @@
             Grid.Row="5"
             Grid.Column="3"
             Margin="5"
-            SelectedDate="{Binding GeboorteDatum, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
+            SelectedDate="{Binding MijnSelectedItem.Geboortedatum, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
             SelectedDateFormat="Short">
             <DatePicker.Resources>
                 <Style TargetType="DatePickerTextBox">
@@ -203,6 +195,7 @@
             x:Name="isGebruiker"
             Grid.Row="6"
             Grid.Column="3"
-            Margin="5" />
+            Margin="5"
+            IsChecked="{Binding MijnSelectedItem.IsApplicationUser, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
     </Grid>
 </UserControl>
