--- a/HomeManager/View/Personen/ucPersoon.xaml
+++ b/HomeManager/View/Personen/ucPersoon.xaml
@@ -84,10 +84,17 @@
                         <StackPanel Orientation="Horizontal">
                             <!--  Foto van de persoon, met standaardafbeelding als er geen foto is  -->
                             <Image
+                                Source="{Binding MijnSelectedItem.Foto}"
                                 Width="50"
                                 Height="50"
-                                Margin="5" />
-                            <!--  Source="{Binding ProfileImage, Converter={StaticResource NullToDefaultImageConverter}}"  -->
+                                Margin="5" >
+                                <i:Interaction.Triggers>
+                                    <i:EventTrigger EventName="MouseLeftButtonUp">
+                                        <i:InvokeCommandAction Command="{Binding cmdShowPicture}" />
+                                    </i:EventTrigger>
+                                </i:Interaction.Triggers>
+                            </Image>
+
 
                             <!--  Naam en voornaam  -->
                             <StackPanel Margin="10,0,0,0" Orientation="Vertical">
