--- a/HomeManager/View/Security/ucCredentialGroup.xaml
+++ b/HomeManager/View/Security/ucCredentialGroup.xaml
@@ -2,7 +2,7 @@
     x:Class="HomeManager.View.ucCredentialGroup"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:Helpers="clr-namespace:HomeManager.Helpers"
+    xmlns:Helpers="clr-namespace:HomeManager.Helpers"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:local="clr-namespace:HomeManager.View"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
@@ -73,13 +73,12 @@
                     Grid.Row="1"
                     Grid.RowSpan="5"
                     Grid.Column="1"
-                    DisplayMemberPath="WachtwoordGroep" 
-                                        ItemsSource="{Binding MijnCollectie}"
-                    SelectedItem="{Binding MijnSelectedItem, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
-                    />
+                    DisplayMemberPath="WachtwoordGroep"
+                    ItemsSource="{Binding MijnCollectie}"
+                    SelectedItem="{Binding MijnSelectedItem, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
 
 
-              
+
 
                 <Label
                     Grid.Row="1"
@@ -92,10 +91,9 @@
                     Grid.Row="1"
                     Grid.Column="3"
                     Height="20"
-                    VerticalAlignment="center" 
-                                Helpers:clsFocusExtension.IsFocused="{Binding IsFocusedAfterNew, Mode=TwoWay}"
-                     Text="{Binding MijnSelectedItem.WachtwoordGroep, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged, ValidatesOnDataErrors=True}"
-                    />
+                    VerticalAlignment="center"
+                    Helpers:clsFocusExtension.IsFocused="{Binding IsFocusedAfterNew, Mode=TwoWay}"
+                    Text="{Binding MijnSelectedItem.WachtwoordGroep, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged, ValidatesOnDataErrors=True}" />
 
 
             </Grid>
