--- a/HomeManager/View/Security/ucCredentialManagement.xaml
+++ b/HomeManager/View/Security/ucCredentialManagement.xaml
@@ -11,6 +11,10 @@
     d:DesignWidth="800"
     Background="{StaticResource myBackground}"
     mc:Ignorable="d">
+    <UserControl.Resources />
+
+
+
     <Grid DataContext="{Binding Source={StaticResource VML}, Path=CredentialManagementViewModel}">
         <Grid.RowDefinitions>
             <RowDefinition Height="50" />
@@ -75,10 +79,17 @@
                 <DataGrid
                     Grid.Row="2"
                     Grid.RowSpan="7"
-                    Grid.Column="1">
+                    Grid.Column="1"
+                    AutoGenerateColumns="False"
+                    IsReadOnly="True"
+                    ItemsSource="{Binding GefilterdeCollectie}"
+                    SelectedItem="{Binding MijnSelectedItem, Mode=TwoWay}"
+                    SelectionUnit="FullRow">
+
                     <DataGrid.Columns>
-                        <DataGridTextColumn Header="First Property" />
-                        <DataGridTextColumn Header="Second Property" />
+
+                        <DataGridTextColumn Binding="{Binding WachtwoordGroepNaam}" Header="First Property" />
+                        <DataGridTextColumn Binding="{Binding WachtwoordNaam}" Header="Second Property" />
                     </DataGrid.Columns>
                 </DataGrid>
                 <StackPanel
@@ -86,14 +97,24 @@
                     Grid.Column="1"
                     HorizontalAlignment="Left"
                     Orientation="Horizontal">
-                    <TextBox Width="224" Height="20" />
-                    <Path
-                        Width="20"
-                        Height="20"
-                        Margin="5,0,0,0"
-                        Data="{StaticResource myFilterButton}"
-                        Fill="{StaticResource myTitleBar}"
-                        Stretch="Fill" />
+                    <TextBox Width="224" Height="20" Text="{Binding FilterTekst, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"/>
+                    <Button Command="{Binding cmdFilter}" Cursor="Hand">
+                        <Button.Template>
+                            <ControlTemplate>
+                                <Border Background="{StaticResource myBackground}">
+                            
+                                <Path
+                                    Width="20"
+                                    Height="20"
+                                    Margin="5,0,0,0"
+                                    Data="{StaticResource myFilterButton}"
+                                    Fill="{StaticResource myTitleBar}"
+                                    Stretch="Fill" />
+
+                                </Border>
+                            </ControlTemplate>
+                        </Button.Template>
+                    </Button>
                 </StackPanel>
 
 
@@ -110,7 +131,7 @@
                     Height="20"
                     VerticalAlignment="center"
                     Helpers:clsFocusExtension.IsFocused="{Binding IsFocusedAfterNew, Mode=TwoWay}"
-                    Text="{Binding MijnSelectedItem.WachtwoordNaam}" />
+                    Text="{Binding MijnSelectedItem.WachtwoordNaam, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged, ValidatesOnDataErrors=True}" />
 
                 <Label
                     Grid.Row="2"
@@ -124,10 +145,10 @@
                     Grid.Column="3"
                     Height="20"
                     VerticalAlignment="center"
-            DataContext="{Binding Source={StaticResource VML}, Path=CredentialGroupViewModel}"
-            ItemsSource="{Binding MijnCollectie}"
-            SelectedValue="{Binding RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type Grid}}, Path=DataContext.MijnSelectedItem.WachtwoordGroepID, Mode=TwoWay}"
-            SelectedValuePath="WachtwoordGroepID" />
+                    DataContext="{Binding Source={StaticResource VML}, Path=CredentialGroupViewModel}"
+                    ItemsSource="{Binding MijnCollectie}"
+                    SelectedValue="{Binding RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type Grid}}, Path=DataContext.MijnSelectedItem.WachtwoordGroepID, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
+                    SelectedValuePath="WachtwoordGroepID" />
 
                 <Label
                     Grid.Row="3"
@@ -141,7 +162,7 @@
                     Grid.RowSpan="3"
                     Grid.Column="3"
                     Background="White"
-                    Text="{Binding MijnSelectedItem.WachtwoordOmschrijving}" />
+                    Text="{Binding MijnSelectedItem.WachtwoordOmschrijving, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged, ValidatesOnDataErrors=True}" />
 
                 <Label
                     Grid.Row="6"
@@ -155,7 +176,7 @@
                     Grid.Column="3"
                     Height="20"
                     VerticalAlignment="center"
-                    Text="{Binding MijnSelectedItem.Login}" />
+                    Text="{Binding MijnSelectedItem.Login, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged, ValidatesOnDataErrors=True}" />
 
                 <Label
                     Grid.Row="7"
@@ -169,7 +190,7 @@
                     Grid.Column="3"
                     Height="20"
                     VerticalAlignment="center"
-                    Text="{Binding MijnSelectedItem.Wachtwoord}" />
+                    Text="{Binding MijnSelectedItem.Wachtwoord, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged, ValidatesOnDataErrors=True}" />
 
 
 
