--- a/HomeManager/View/Security/ucAccount.xaml
+++ b/HomeManager/View/Security/ucAccount.xaml
@@ -1,5 +1,5 @@
 ﻿<UserControl
-    x:Class="HomeManager.View.ucAccounts"
+    x:Class="HomeManager.View.ucAccount"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -10,7 +10,7 @@
     d:DesignWidth="800"
     Background="{StaticResource myBackground}"
     mc:Ignorable="d">
-    <Grid>
+    <Grid DataContext="{Binding Source={StaticResource VML}, Path=AccountViewModel}">
         <Grid.RowDefinitions>
             <RowDefinition Height="50" />
             <RowDefinition Height="*" />
@@ -72,7 +72,10 @@
                     Grid.Row="1"
                     Grid.RowSpan="5"
                     Grid.Column="1"
-                    DisplayMemberPath="RolNaam" />
+                    DisplayMemberPath="Login"
+                    ItemsSource="{Binding MijnCollectie}"
+                    SelectedItem="{Binding MijnSelectedItem, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
+
 
                 <Label
                     Grid.Row="1"
@@ -85,7 +88,11 @@
                     Grid.Row="1"
                     Grid.Column="3"
                     Height="20"
-                    VerticalAlignment="Center" />
+                    VerticalAlignment="Center"
+                    DataContext="{Binding Source={StaticResource VML}, Path=PersoonViewModel}"
+                    ItemsSource="{Binding MijnCollectie}"
+                    SelectedValue="{Binding RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type Grid}}, Path=DataContext.MijnSelectedItem.PersoonID, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
+                    SelectedValuePath="PersoonID" />
 
                 <Label
                     Grid.Row="2"
@@ -98,7 +105,11 @@
                     Grid.Row="2"
                     Grid.Column="3"
                     Height="20"
-                    VerticalAlignment="Center" />
+                    VerticalAlignment="Center"
+                    DataContext="{Binding Source={StaticResource VML}, Path=RechtenViewModel}"
+                    ItemsSource="{Binding MijnRollenCollectie}"
+                    SelectedValue="{Binding RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type Grid}}, Path=DataContext.MijnSelectedItem.RolID, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
+                    SelectedValuePath="RolID" />
 
 
 
@@ -113,7 +124,9 @@
                     Grid.Row="3"
                     Grid.Column="3"
                     Height="20"
-                    VerticalAlignment="Center" />
+                    VerticalAlignment="Center"
+                    Text="{Binding MijnSelectedItem.Login, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged, ValidatesOnDataErrors=True}" />
+
 
 
                 <Label
@@ -127,7 +140,9 @@
                     Grid.Row="4"
                     Grid.Column="3"
                     Height="20"
-                    VerticalAlignment="Center" />
+                    VerticalAlignment="Center"
+                    Text="{Binding MijnSelectedItem.Wachtwoord, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged, ValidatesOnDataErrors=True}" />
+
 
 
             </Grid>
