--- a/HomeManager/View/Budget/ucCategorie.xaml
+++ b/HomeManager/View/Budget/ucCategorie.xaml
@@ -11,7 +11,7 @@
     d:DesignWidth="800"
     Background="{StaticResource myBackground}"
     mc:Ignorable="d">
-    <Grid>
+    <Grid DataContext="{Binding Source={StaticResource VML}, Path=CategorieViewModel}">
         <Grid.RowDefinitions>
             <RowDefinition Height="50" />
             <RowDefinition Height="*" />
@@ -48,7 +48,7 @@
             </Grid>
         </Border>
 
-        <Grid Grid.Row="1" DataContext="{Binding Source={StaticResource VML}, Path=CategorieViewModel}">
+        <Grid Grid.Row="1" >
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="100" />
                 <ColumnDefinition Width="auto" />
@@ -69,20 +69,20 @@
                 Grid.Row="1"
                 Grid.Column="1"
                 Content="Budget Categorie" />
-            <TextBlock
+            <TextBox
                 Grid.Row="1"
                 Grid.Column="2"
                 Grid.ColumnSpan="2"
                 Width="200"
+                Text="{Binding MijnSelectedItem.BudgetCategorie, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged, ValidatesOnDataErrors=True}"
                 Background="White" />
             <ListBox
                 Grid.Row="3"
-                Grid.Column="2"
-                Helpers:clsFocusExtension.IsFocused="{Binding IsFocused, Mode=TwoWay}"
+                Grid.Column="2"               
                 ItemsSource="{Binding MijnCollectie}"
                 SelectedIndex="{Binding MijnSelectedItem.MijnSelectedIndex, Mode=Twoway}"
                 SelectedItem="{Binding MijnSelectedItem, UpdateSourceTrigger=PropertyChanged}"
-                Visibility="{Binding MijnSelectedItem.MyVisibility, Mode=Twoway, Converter={StaticResource VisibilityConvertor}}" />
+                />
 
         </Grid>
 
